# formscore

./: .dockerignore  .gitignore  Dataset_squats.py  Dockerfile  README.md  docker-compose.yml  evaluate.py  pipeline.py  pyproject.toml  requirements.txt  verify_env.py  video_loader.py
.streamlit/: config.toml
app/: streamlit_app.py
checkpoints/: cnn_baseline.pt  cnn_test.pt  e4_ablation_feat5_fold1.pt  e4_ablation_feat5_fold2.pt  e4_ablation_feat5_fold3.pt  e4_ablation_feat5_fold4.pt  e4_ablation_feat5_fold5.pt  e4_ablation_feat8_fold1.pt  e4_ablation_feat8_fold2.pt  e4_ablation_feat8_fold3.pt  e4_ablation_feat8_fold4.pt  e4_ablation_feat8_fold5.pt  lstm_baseline.pt  lstm_best_full.pt  lstm_pushup.pt  lstm_shoulder_press.pt  lstm_squat.pt  lstm_squat_finetuned.pt  lstm_test.pt
configs/: exercises.py
data/: dataset_loader.py  labeler_agreement.py  labels_template.csv  synthetic_loader.py
explainability/: feedback_lookup.py  shap_explainer.py  shap_heatmap.py
modeling/: base_trainer.py  cnn_scorer.py  evaluate.py  load_model.py  lstm_scorer.py  rf_baseline.py  train_loop.py
preprocessing/: feature_engineer.py  normalizer.py  rep_segmenter.py  rule_scorer.py
results/: E1_backbone.csv  E2_segmenter.csv  E3_cnn_eval.csv  E3_cnn_eval_v2.csv  E3_comparison.csv  E3_comparison_v2.csv  E3_lstm_eval.csv  E3_lstm_eval_v2.csv  E3_rf_eval_v2.csv  E4_ablation.csv  E5_crossdataset.csv  E5_summary.csv  labeling_sheet.csv  test_pipeline_output.json
scripts/: compare_models.py  download_models.py  generate_figures.py  generate_results_plots.py  inference.py  run_e3_v2.py  (+8 more)
(+7 files in other folders)
