[project]
name = "fitcheck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "captum>=0.8.0",
    "mediapipe>=0.10.33",
    "numpy>=1.26.4",
    "scipy>=1.17.1",
    "shap>=0.49.1",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
]
