[project]
name = "fitcheck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "av>=16.1.0",
    "captum>=0.8.0",
    "mediapipe>=0.10.33",
    "numpy>=1.26.4",
    "onnxruntime>=1.25.0",
    "rtmlib>=0.0.15",
    "scipy>=1.17.1",
    "shap>=0.49.1",
    "streamlit>=1.56.0",
    "streamlit-webrtc>=0.64.5",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
]
